Fix a bug on home page navigation bar white space

--- a/style.css
+++ b/style.css
@@ -642,7 +642,7 @@
     align-items: center;
     list-style: none;
     position: absolute;
-    left: 610px;
+    left: 43%;
     top: 30px;
   }
 
